--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-h1 {
-  color: red;
+body {
+	color: #444;
+	font-size: 18px;
+	line-height: 1.6;
+	margin: 40px auto;
+	max-width: 650px;
+	padding: 0 10px;
+}
+
+h1,
+h2,
+h3 {
+	line-height: 1.2;
 }
